rename Units referential to Quantitative

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
         this.life_expectancy = 80;
         this.dividend_start = 1000;
         this.money_duration = 160;
-        this.referential = 'units';
+        this.referential = 'quantitative';
 
         this.get_data = function () {
             this.life_expectancy = parseInt(document.getElementById('life_expectancy').value);
