add monetary mass

--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
 
         // calculate data
         var data = money.get_data();
-        console.log(data);
+        //console.log(data);
         // reload data in chart
         chart.load({
             columns: data.columns
