--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         this.life_expectancy = 80;
         this.dividend_start = 1000;
         this.money_duration = 160;
-        this.referential = 'quantitative';
+        this.referential = 'quantitative_uda';
 
         this.get_data = function () {
             this.life_expectancy = parseInt(document.getElementById('life_expectancy').value);
@@ -104,10 +104,13 @@
     money.add_account('member 1', 1);
 
     // add a member account
-    money.add_account('member 2', 10);
+    money.add_account('member 2', 20);
 
     // add a member account
-    money.add_account('member 3', 20);
+    money.add_account('member 3', 30);
+
+    // add a member account
+    money.add_account('member 4', 40);
 
     // generate data
     var data = money.get_data();
