add "add account" button

--- a/src/index.html
+++ b/src/index.html
@@ -33,20 +33,19 @@
 <div class="title">Relative Theory of Money Charts</div>
 
 <form>
+    <label for="display_referential">Referential</label><select id="display_referential" name="money_duration"></select>
+
     <div>
-    <label for="life_expectancy">Life Expectancy</label>
-    <input id="life_expectancy" type="text" value="80" name="life_expectancy"/>
-    <label for="dividend_start">First Dividend</label>
-    <input id="dividend_start" type="text" value="1000" name="dividend_start"/>
-    <label for="money_duration">Money Duration</label>
-    <input id="money_duration" type="text" value="160" name="money_duration"/>
-    <label for="display_referential">Referential</label>
-    <select id="display_referential" name="money_duration"></select>
-
-    <input id="generate_button" type="button" value="Update" name="generate_button">
+        <label for="life_expectancy">Life Expectancy</label><input id="life_expectancy" type="text" value="80" name="life_expectancy"/>
+        <label for="dividend_start">First Dividend</label><input id="dividend_start" type="text" value="1000" name="dividend_start"/>
+        <label for="money_duration">Money Duration</label><input id="money_duration" type="text" value="160" name="money_duration"/>
+        <input id="generate_button" type="button" value="Update" name="generate_button">
     </div>
-    <input id="delete_last_account" type="button" value="Delete Last Account"/>
-
+    <div>
+        <label for="new_account_birth">New Member Birth Year</label><input id="new_account_birth" type="text" value="1"/>
+        <input id="add_account" type="button" value="Add Member"/>
+        <input id="delete_last_account" type="button" value="Delete Last Member"/>
+    </div>
 </form>
 
 <div id="chart" style="border: solid 1px gray"></div>
@@ -107,12 +106,6 @@
     // add a member account
     money.add_account('member 1', 1);
 
-    // add a member account
-    money.add_account('member 2', 20);
-
-    // add a member account
-    money.add_account('member 3', 30);
-
     // generate data
     var data = money.get_data();
 
@@ -140,9 +133,7 @@
         var data = money.get_data();
         //console.log(data);
         // reload data in chart
-        chart.load({
-            columns: data.columns
-        });
+        chart.load(data);
     }
 
     /**
@@ -156,9 +147,25 @@
         });
     }
 
+    /**
+     * Add account
+     */
+    function add_account() {
+        // construct name
+        var name = 'member ' + (money.accounts.length + 1)
+
+        // add a member account at the birth date specified
+        money.add_account(name, parseInt(document.getElementById('new_account_birth').value));
+
+        update();
+    }
+
     document.getElementById('generate_button').addEventListener('click', update);
     document.getElementById('display_referential').addEventListener('change', update);
+
+    document.getElementById('add_account').addEventListener('click', add_account);
     document.getElementById('delete_last_account').addEventListener('click', delete_last_account);
+
 </script>
 
 <!--
