Move js dependencies in vendor folder

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
 
     <!-- javascript sources -->
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    <script type="application/javascript" src="js/d3-3.5.6.min.js"></script>
-    <script type="application/javascript" src="js/c3.min.js"></script>
+    <script type="application/javascript" src="js/vendor/d3-3.5.6.min.js"></script>
+    <script type="application/javascript" src="js/vendor/c3.min.js"></script>
     <script type="application/javascript" src="js/trm.js"></script>
 
 </head>
