- Subtitution of the drop-down list (containing 6 items) by two drop-down lists (one with 3 items "UDA", "UDB", "UDG", one with 2 items "Quantitative", "Relative"). - Adjustment of the layout. - Add of descriptions about DU formulas. - Fix of the DUG formula to use N(t-1) instead of N(t). - Modification of the DUB formula so that the DU no more increase if "people" is equal to 0.

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,8 @@
 
 <form>
     <div class="frame">
-        <label for="reference_frame">Reference Frame</label><select id="reference_frame" name="money_duration"></select>
+        <label for="reference_frame">Reference Frame</label><select id="reference_frame" name="reference_frame"></select>
+        <label for="formula_type">Dividend Formula</label><select id="formula_type" name="formula_type"></select>
     </div>
     <div class="frame">
         <label for="new_account_birth">New member birth year</label><input id="new_account_birth" type="text"
