- In addition to the two reference frames "Quantitive" and "Relative", a third is added called "%M/N" => the chart "chart_percent_average" is removed. - The series "monetary_mass", "dividend" et "people" are moved in a new chart. - A second "y" axe is added and is dedicated to the "people" serie. - "area" type is used for the "average" serie.

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
 <!-- Add your site or application content here -->
 <div class="title">Relative Theory of Money Charts</div>
 
-<div id="chart_reference_frame" class="frame"></div>
-<div id="chart_percent_average" class="frame"></div>
+<div id="chart_reference_frame1" class="frame"></div>
+<div id="chart_reference_frame2" class="frame"></div>
 
 <form>
     <div class="frame">
